# Ferrum

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
